# agentikernel

./: .gitignore  README.md  hatch_build.py  pyproject.toml
agentik/: __init__.py  __main__.py  kernel.py
agentikernel/: __init__.py  __main__.py  kernel.py
agentikernel/magics/: add_kernel_magic.py  remove_kernel_magic.py
