[build-system]
requires = ["hatchling>=1.10.0", "ipykernel", "jupyter-client"]
build-backend = "hatchling.build"

[project]
name = "agentikernel"
version = "0.0.3"
description = "Jupyter Kernel containing an agent that can access to other kernels"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["jupyter-client>=8.8.0", "pydantic-ai-kernel>=1.2.11"]
authors = [
    { name = "Marius Garénaux Gruau", email = "marius.garenaux-gruau@irisa.fr" },
]
maintainers = [
    { name = "Marius Garénaux Gruau", email = "marius.garenaux-gruau@irisa.fr" },
]
keywords = ["ai", "kernel", "jupyter", "pydantic-ai", "agent"]

[project.urls]
Repository = "https://github.com/mariusgarenaux/agentikernel"


[tool.hatch.version]
path = "agentikernel/__init__.py"

# Used to call hatch_build.py
[tool.hatch.build.hooks.custom]

[tool.hatch.build.targets.sdist]
include = ["/agentikernel"]

[tool.hatch.build.targets.wheel.shared-data]
"data_kernelspec/share" = "share"
